Home Page added with test code from the login page to send you there

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <!--TEXT VIEWS-->
     <string name="usernameTV">Username</string>
     <string name="passwordTV">Password</string>
+    <string name="homePageTV">Home Page</string>
 
     <!--HINTS-->
     <string name="usernameHint">username</string>
