Dialog popup added so that a choice between donors and charities is given when registering, warnings have been fixed for the registration page and a second registration page has been created, 1 for donors, 1 for charities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <!--BUTTONS-->
     <string name="loginBtn">Login</string>
     <string name="registerBtn">Register</string>
+    <string name="donorBtn">Donor</string>
+    <string name="charityBtn">Charity</string>
 
     <!--TEXT VIEWS-->
     <string name="usernameTV">Username</string>
@@ -12,6 +14,15 @@
 
     <!--HINTS-->
     <string name="firstNameHT">First Name:</string>
+    <string name="lastNameHT">Last Name:</string>
+    <string name="postcodeHT">Postcode:</string>
+    <string name="organisationNameHT">Organisation Name:</string>
+    <string name="streetNameHT">Street Name:</string>
+    <string name="suburbHT">Suburb:</string>
+    <string name="phoneHT">Phone:</string>
+    <string name="emailOptInHT">Email(Opt in):</string>
+    <string name="passwordHT">Password:</string>
+    <string name="confirmPasswordHT">Confirm Password:</string>
 
     <!--HINTS-->
     <string name="usernameHint">username</string>
