--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,21 +6,23 @@
     <string name="registerBtn">Register</string>
     <string name="donorBtn">Donor</string>
     <string name="charityBtn">Charity</string>
+    <string name="submitBtn">Submit</string>
 
     <!--TEXT VIEWS-->
     <string name="usernameTV">Username</string>
     <string name="passwordTV">Password</string>
     <string name="homePageTV">Home Page</string>
+    <string name="charityRegTV">Charity Registration</string>
+    <string name="donorRegTV">Donor Registration</string>
 
     <!--HINTS-->
     <string name="firstNameHT">First Name:</string>
     <string name="lastNameHT">Last Name:</string>
     <string name="postcodeHT">Postcode:</string>
     <string name="organisationNameHT">Organisation Name:</string>
-    <string name="streetNameHT">Street Name:</string>
+    <string name="streetHT">Street:</string>
     <string name="suburbHT">Suburb:</string>
-    <string name="phoneHT">Phone:</string>
-    <string name="emailOptInHT">Email(Opt in):</string>
+    <string name="emailHT">Email:</string>
     <string name="passwordHT">Password:</string>
     <string name="confirmPasswordHT">Confirm Password:</string>
 
@@ -40,5 +42,5 @@
     <string name="email_address">Email Address:</string>
     <string name="password">Password:</string>
     <string name="confirm_password">Confirm Password:</string>
-    <string name="ok">OK</string>
+
 </resources>
