Added the function to take photos and choose photos from users gallery, implemented on the DonationAd activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,10 @@
     <string name="password">Password:</string>
     <string name="confirm_password">Confirm Password:</string>
 
+    <!--SHARED PREFERENCES-->
+    <string name="donationPrefsString">donationAd</string>
+    <string name="imagePrefsString">imagePreferences</string>
+    <string name="currentDonationString">currentDonation</string>
+    <string name="numImagesString">numImages</string>
+
 </resources>
