Donation ad xml & java files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="imagePrefsString">imagePreferences</string>
     <string name="currentDonationString">currentDonation</string>
     <string name="numImagesString">numImages</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 
 </resources>
