--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="donorBtn">Donor</string>
     <string name="charityBtn">Charity</string>
     <string name="submitBtn">Submit</string>
+    <string name="postBtn">Post</string>
 
     <!--TEXT VIEWS-->
     <string name="usernameTV">Username</string>
