--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,8 @@
     </string>
     <string name="title_activity_maps">Map</string>
 
+    <!--SHARED PREFERENCES-->
+    <string name="locationPrefs">locationPrefs</string>
+    <string name="latLongPrefs">latLongPrefs</string>
+
 </resources>
