Quick access button added to the login page for testing purposes to allow testers to access application functionality without being logged in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="submitBtn">Submit</string>
     <string name="postBtn">Post</string>
     <string name="bookBtn">Book</string>
+    <string name="quickAccessBtn">Quick Access</string>
 
     <!--TEXT VIEWS-->
     <string name="usernameTV">Username</string>
