--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="donorRegTV">Donor Registration</string>
     <string name="bookingPageTV">Booking Page</string>
     <string name="nameLabel">Name:</string>
+    <string name="firstNameTV">First Name:</string>
+    <string name="lastNameTV">Last Name:</string>
     <string name="emailLabel">Email Address:</string>
     <string name="statsTitle">User Statistics</string>
     <string name="preferencesTitle">User Preferences</string>
@@ -70,6 +72,11 @@
     <string name="description">Description</string>
     <string name="locationPrefs">locationPrefs</string>
     <string name="latLongPrefs">latLongPrefs</string>
+    <string name="userPrefs">userPrefs</string>
+    <string name="userEmailPrefs">userEmailPrefs</string>
+    <string name="userPasswordPrefs">userPasswordPrefs</string>
+    <string name="userFirstNamePrefs">userFirstNamePrefs</string>
+    <string name="userLastNamePrefs">userUserLastPrefs</string>
 
     <!--FORMATS-->
     <string name="dateFormat">
