Donation View page, currently Linked from home page to the statistics button, NOTE: still under development

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="logoutButton">Logout</string>
     <string name="backButton">Back</string>
     <string name="quickAccessBtn">Quick Access</string>
+    <string name="makeBookingBtn">Make Booking</string>
 
     <!--TEXT VIEWS-->
     <string name="usernameTV">Username</string>
