--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="longLatHT">Latitude/Longitude</string>
     <string name="additionalCommentsHT">Additional Comments</string>
     <string name="mapSearchHT">Search Here</string>
-    <string name="searchHT">Search for a donation...</string>
+    <string name="searchHT">Search for a donation…</string>
 
     <!--HINTS-->
     <string name="usernameHint">username</string>
@@ -84,6 +84,7 @@
     <string name="userFirstNamePrefs">userFirstNamePrefs</string>
     <string name="userLastNamePrefs">userUserLastPrefs</string>
     <string name="no_data">No data found.</string>
+    <string name="bookingTitle">Arrange a meeting for %s</string>
 
     <!--FORMATS-->
     <string name="dateFormat">
